some css changes

--- a/src/assets/sass/lbd/_cards.scss
+++ b/src/assets/sass/lbd/_cards.scss
@@ -47,7 +47,7 @@
     }
     .card-header{
         font-family: "PT Sans";
-        padding: 15px 15px 0;
+        padding: 24px 0;
         background-color: $white-color;
         border-bottom: none !important;
 
